# smda

./: .coveragerc  .gitattributes  .gitignore  .pre-commit-config.yaml  .pylintrc  LICENSE  Makefile  README.md  README.rst  WORKFLOW_ORGANIZATION.md  analyze.py  analyze_groundtruth.py  analyze_malpedia.py  analyze_msvc.py  config.py  export.py  ida_analyze.py  ida_domain_analyze.py  pylintrc  pyproject.toml  requirements.txt  setup.py  version_history.md
.github/: dependabot.yml
.github/workflows/: ci.yml  perf_benchmark.yml  performance.yml  profile.yml  semantic-pr-title.yml  test.yml
.github/workflows/scripts/: compare_perf.py  evaluate_runtime.py  process_malpedia.py  run_perf_check.py
benchmarks/: README.md  compare_perf_gate.py  post_github_comment.py  profile_diagnostics.py  requirements-performance.txt  smda_perf_runner.py
profiling/: README.md  __init__.py  _target.py  profile_smda.py
smda/: Disassembler.py  DisassemblyResult.py  DisassemblyStatistics.py  SmdaConfig.py
smda/cil/: CilDisassembler.py  CilInstructionEscaper.py  FunctionAnalysisState.py
smda/common/: ApiResolver.py  BasicBlock.py  BinaryInfo.py  BlockLocator.py  CodeXref.py  DominatorTree.py  SmdaBasicBlock.py  SmdaExceptions.py  SmdaFunction.py  SmdaInstruction.py  SmdaReport.py  TailcallAnalyzer.py  Tarjan.py
smda/common/labelprovider/: AbstractLabelProvider.py  ApiResolver.py  CilSymbolProvider.py  DelphiKbSymbolProvider.py  DelphiPythiaProvider.py  DelphiReSymProvider.py  ElfApiResolver.py  ElfSymbolProvider.py  GoLabelProvider.py  OrdinalHelper.py  PdbSymbolProvider.py  PeSymbolProvider.py  RustSymbolProvider.py  WinApiResolver.py
smda/common/labelprovider/rust_demangler/: __init__.py  main.py  rust.py  rust_legacy.py  rust_v0.py  utils.py
smda/dalvik/: DalvikDisassembler.py  DalvikFunctionAnalysisState.py  DalvikOpcodeDecoder.py  __init__.py
smda/ida/: BackendInterface.py  IdaExporter.py  IdaInterface.py
smda/intel/: BitnessAnalyzer.py  FunctionAnalysisState.py  FunctionCandidate.py  FunctionCandidateManager.py  IndirectCallAnalyzer.py  IntelDisassembler.py  IntelInstructionEscaper.py  JumpTableAnalyzer.py  LanguageAnalyzer.py  MnemonicTfIdf.py  definitions.py
smda/utility/: BracketQueue.py  DelphiKbFileLoader.py  DexFileLoader.py  ElfFileLoader.py  FileLoader.py  MachoFileLoader.py  MemoryFileLoader.py  PeFileLoader.py  PriorityQueue.py  StringExtractor.py  helpers.py
src/smda/: Disassembler.py  DisassemblyResult.py  DisassemblyStatistics.py  SmdaConfig.py
src/smda/cil/: CilDisassembler.py  CilInstructionEscaper.py  FunctionAnalysisState.py
src/smda/common/: BasicBlock.py  BinaryInfo.py  CodeXref.py  DominatorTree.py  ExceptionHandling.py  RecursiveDisassembler.py  SmdaBasicBlock.py  SmdaFunction.py  SmdaInstruction.py  SmdaReport.py  TailcallAnalyzer.py
src/smda/common/arch/: ArchBackend.py
src/smda/common/labelprovider/: AbstractLabelProvider.py  CilSymbolProvider.py  DelphiKbSymbolProvider.py  DelphiPythiaProvider.py  DelphiReSymProvider.py  ElfApiResolver.py  ElfSymbolProvider.py  GoLabelProvider.py  PdbSymbolProvider.py  PeSymbolProvider.py  RustSymbolProvider.py  WinApiResolver.py
src/smda/common/labelprovider/rust_demangler/: main.py  rust_legacy.py  rust_v0.py
src/smda/dalvik/: DalvikDisassembler.py  DalvikFunctionAnalysisState.py  DalvikOpcodeDecoder.py
src/smda/ida/: IdaExporter.py  IdaInterface.py
src/smda/intel/: BitnessAnalyzer.py  FunctionAnalysisState.py  FunctionCandidate.py  FunctionCandidateManager.py  IndirectCallAnalyzer.py  IntelDisassembler.py  IntelInstructionEscaper.py  JumpTableAnalyzer.py  LanguageAnalyzer.py  MnemonicTfIdf.py  X86Backend.py  definitions.py
src/smda/utility/: BracketQueue.py  DexFileLoader.py  ElfFileLoader.py  FileLoader.py  MachoFileLoader.py  MemoryFileLoader.py  PeFileLoader.py  PriorityQueue.py  StringExtractor.py  common.py
tests/: asprox_0x008D0000_xored  bashlite_xored  blockblast_classes_xored  cat  cat_xored  context.py  cutwail_xored  komplex  komplex_xored  mirai_arm_xored  mirai_i386_xored  mirai_m68k_xored  mirai_mips_xored  mirai_mipsel_xored  mirai_nios2_xored  mirai_openrisc_xored  mirai_ppc_xored  mirai_sh4_xored  mirai_sparc_xored  mirai_x64_xored  mirai_xtensa_xored  njrat_xored  pe_export_label_test_xored  testBenchmarkEval.py  testBitnessAnalyzer.py  testBracketQueue.py  testCandidateSafeguards.py  testCommonModels.py  testDalvikDisassembler.py  testDefinitionsExpansion.py  testDelphiPythiaProvider.py  testElfSymbolProvider.py  testEscaper.py  testExceptionHandling.py  testFileFormatParsers.py  testIndirectCallAnalyzer.py  testIntegration.py  testIntelDisassembler.py  testLanguageAnalyzer.py  testPdataExtraction.py  (+9 more)
