[build-system]
requires = ["setuptools>=64.0.0,<82.1.0", "wheel>=0.47.0"]
build-backend = "setuptools.build_meta"

[project]
name = "smda"
description = "A recursive disassmbler optimized for CFG recovery from memory dumps. Based on capstone."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "BSD 2-Clause"}
authors = [
    {name = "Daniel Plohmann", email = "daniel.plohmann@mailbox.org"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Security",
    "Topic :: Software Development :: Disassemblers",
]
dynamic = ["version"]
dependencies = [
    "capstone",
    "dncil",
    "dnfile",
    "lief>=0.16.0",
]

[project.urls]
Homepage = "https://github.com/danielplohmann/smda"

[project.optional-dependencies]
dev = [
    "build",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "ruff",
    "tqdm",
    "twine",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "smda.__version__"}

[tool.pytest.ini_options]
python_files = ["test*.py"]
testpaths = ["tests"]
addopts = ["-p", "no:cacheprovider"]
pythonpath = ["src"]

[tool.coverage.run]
branch = true
source = ["smda"]
omit = [
    "*lib*",
    "capstone/*",
    "*distutils/*",
    "ctypes/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self\\.debug",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "def main\\(argv\\):",
]
ignore_errors = true

[tool.coverage.html]
directory = "coverage-html"

[tool.ruff]
# Same as Black.
line-length = 120

# Assume Python 3.10+
target-version = "py310"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
select = [
    "E4",
    "E7",
    "E9",
    "F",
    "W",
    "I",  # isort
    "UP", # pyupgrade
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "PIE", # flake8-pie
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # Line too long (handled by formatter)
    "UP006",  # Keep existing typing aliases without broad modernization churn
    "UP007",  # Keep existing Optional/Union annotations without broad modernization churn
    "UP035",  # Keep existing typing imports without broad modernization churn
    "UP045",  # Keep existing Optional annotations without broad modernization churn
]

[tool.ruff.lint.isort]
known-first-party = ["smda"]
